Fix border adding overflow

--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -6,7 +6,14 @@
   html,
   body,
   #root {
+    box-sizing: border-box;
     height: 100%;
+  }
+
+  *,
+  *::before,
+  *::after {
+    box-sizing: inherit;
   }
 }
 
